Fixed a spacing issue in the "Search" dialog that pressed the advanced options right up to the contents before it.

--- a/src/calendarjs.scss
+++ b/src/calendarjs.scss
@@ -1139,7 +1139,7 @@ div.search {
             margin-bottom: 8px;
         }
 
-        div.advanced div.split {
+        div.advanced {
             margin-top: $spacing / 2 !important;
         }
     }
